# soroban-mass-payouts-contract

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  test.rs
